--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <title>WEB1 - WEB</title>
         <meta charset=""utf-8">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G387MK1333"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G387MK1333');
+</script>
     </head>
     <body>
         <h1><a href="index.html">WEB</a></h1>
@@ -14,4 +23,24 @@
         <h2>WEB</h2> 
         <p>The World Wide Web (WWW, W3) is a worldwide information space where people can share information through computers connected to the Internet . Often referred to simply as the Web . The term is often used synonymously with the Internet, but strictly speaking they are different concepts. The Web is just one service that runs on the Internet, like e-mail . However, since 1993, the Web has occupied an absolute place in the structure of the Internet. It also refers to a transmission method that exchanges pictures and characters using the HTTP protocol , hypertext , HTML format, etc. on the Internet .</p>
     </body>
+    <P><div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-hpmws7xovw.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </P>
 </html>
