--- a/2.html
+++ b/2.html
@@ -3,6 +3,15 @@
     <head>
         <title>WEB1 - CSS</title>
         <meta charset=""utf-8">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G387MK1333"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G387MK1333');
+</script>
     </head>
     <body>
         <h1><a href="index.html">WEB</a></h1>
@@ -14,5 +23,25 @@
         <h2>CSS</h2> 
         <p>A Cascading Style Sheet ( English : Cascading Style Sheet ) is a style language ( English : Style sheet language [ * ] ) that describes how the markup language is actually displayed [1] . It is mainly used for XHTML , but can also be used for XML . It is a W3C standard, and it has a high degree of freedom when defining layout and style . The default file name [2] is style.css. If a markup language (ex: HTML ) is in charge of the body of a website, CSS can be said to be in charge of decorating it like clothes and accessories. In other words, you can decorate it like a completely different website by leaving the HTML structure as it is and changing only the CSS file . In the case of CSS3 currently under development, functions that can replace images created with graphic editing programs such as shadow effect, gradation , and transformation have been added. In addition, various animation functions have been added, replacing Adobe Flash to some extent.
         </p>
+        <P><div id="disqus_thread"></div>
+            <script>
+                /**
+                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                /*
+                var disqus_config = function () {
+                this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                };
+                */
+                (function() { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://web1-hpmws7xovw.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </P>
     </body>
 </html>
