--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
     <head>
         <title>WEB1 - JavaScirpt</title>
         <meta charset=""utf-8">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G387MK1333"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G387MK1333');
+</script>
     </head>
     <body>
         <h1><a href="index.html">WEB</a></h1>
@@ -13,5 +22,25 @@
         </ol>
         <h2>JavaScirpt</h2> 
         <p>JavaScript ( English : JavaScript ) is an object-based script programming language . This language is mainly used within the web browser and has the ability to access built-in objects of other applications. It is also used for server programming, such as a runtime environment such as Node.js. JavaScript was originally developed by Brendan Eich of Netscape Communications Corporation , first under the name Mocha and later under the name LiveScript, and finally became JavaScript. Although JavaScript has similarities in syntax with Sun Microsystems ' Java , this is actually because both languages ​​are based on the basic syntax of the C language , and Java and JavaScript are not directly related. Aside from the name and syntax , it has more similarities to Self and Scheme than to Java . JavaScript is ECMAScriptIt is recognized as the language that best implements the standard specification of (ECMAScript) and was basically supported by most browsers up to ECMAScript 5 (ES5), but from ECMAScript 6 onward, it is compiled with a transpiler for browser compatibility .</p>
+        <P><div id="disqus_thread"></div>
+            <script>
+                /**
+                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                /*
+                var disqus_config = function () {
+                this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                };
+                */
+                (function() { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://web1-hpmws7xovw.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </P>
     </body>
 </html>
