--- a/2.html
+++ b/2.html
@@ -1,9 +1,9 @@
 <!Doctype HTML>
 <html>
-    <head>
-        <title>WEB1 - CSS</title>
-        <meta charset=""utf-8">
-        <!-- Google tag (gtag.js) -->
+<head>
+    <title>WEB1 - HTML</title>
+    <meta charset=""utf-8">
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G387MK1333"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,7 +12,7 @@
 
   gtag('config', 'G-G387MK1333');
 </script>
-    </head>
+</head>
     <body>
         <h1><a href="index.html">WEB</a></h1>
         <ol>
